--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "tun2socks"
+name = "tun2socks_rust"
 crate-type = ["staticlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 trust-dns-resolver = "0.23.2"
+log = "0.4.20"
